k8s/fms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fms-backend
  namespace: fms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fms-backend
  template:
    metadata:
      labels:
        app: fms-backend
    spec:
      containers:
        - name: fms-backend
          image: ritik7806/fms:latest
          ports:
            - containerPort: 8082
