k8s/fms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fms-service
  namespace: fms
spec:
  type: ClusterIP
  selector:
    app: fms-backend
  ports:
    - port: 80
      targetPort: 8082
