k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fms-inggress
  namespace: fms
spec:
  ingressClassName: nginx
  rules:
  - host: fms.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fms-service
            port:
              number: 80
